--- a/pom.xml
+++ b/pom.xml
@@ -177,6 +177,20 @@
 			<version>1.16</version>
 		</dependency>
 		<!-- mysql, mariadb log s 2022.02.26 -->
+		
+		<!-- jackson -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.9.2</version>
+		</dependency>
+		
+		<!-- jackson-core -->
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>2.9.2</version>
+		</dependency>
 				
 	</dependencies>
     <build>
