--- a/pom.xml
+++ b/pom.xml
@@ -191,7 +191,21 @@
 		    <artifactId>jackson-databind</artifactId>
 		    <version>2.9.2</version>
 		</dependency>
-				
+		
+		<!-- jsoup -->
+		<dependency>
+		  <groupId>org.jsoup</groupId>
+		  <artifactId>jsoup</artifactId>
+		  <version>1.11.2</version>
+		</dependency>
+		
+		<!-- jython -->
+		<dependency>
+			<groupId>org.python</groupId>
+			<artifactId>jython-standalone</artifactId>
+			<version>2.7.1</version>
+		</dependency>
+		
 	</dependencies>
     <build>
         <plugins>
