--- a/src/main/webapp/resources/static/2022/.gitignore
+++ b/src/main/webapp/resources/static/2022/.gitignore
@@ -473,3 +473,15 @@
 /81888.png
 /87717.png
 /88723.png
+/184343.png
+/209731.png
+/213334.png
+/213384.png
+/213418.png
+/214337.png
+/217514.png
+/218468.png
+/218604.png
+/221020.png
+/221022.png
+/221782.png
