--- a/pom.xml
+++ b/pom.xml
@@ -206,6 +206,14 @@
 			<version>2.7.1</version>
 		</dependency>
 		
+		<!-- fileupload s 2022.03.30 -->
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.4</version>
+		</dependency>
+		<!-- fileupload e 2022.03.30 -->
+		
 	</dependencies>
     <build>
         <plugins>
