--- a/pom.xml
+++ b/pom.xml
@@ -213,6 +213,14 @@
 			<version>1.4</version>
 		</dependency>
 		<!-- fileupload e 2022.03.30 -->
+		
+		<!-- coolsms -->
+		<dependency>
+		    <groupId>net.nurigo</groupId>
+		    <artifactId>javaSDK</artifactId>
+		    <version>2.2</version>
+		</dependency>
+		
 	</dependencies>
 	
     <build>
