--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,14 @@
 		</dependency>
 		<!-- mybatis e 2022.02.13 -->
 		
+		<!-- ojdbc8 s 2022.06.02 -->
+		<dependency>
+			<groupId>com.oracle.database.jdbc</groupId>
+			<artifactId>ojdbc8</artifactId>
+			<version>21.5.0.0</version>
+		</dependency>
+		<!-- ojdbc8 e 2022.06.02 -->
+		
 		<!-- @Resource in DAO: multi db connection : s 2022.02.13 -->
 		<dependency>
 		    <groupId>javax.annotation</groupId>
